# btc

./: Cargo.toml  README.md  TODO.md
examples/: A.btc  B.btc  overview.btc
src/: cli.rs  exec.rs  grammar.lalrpop  main.rs  parser.rs  syntax.rs  typing.rs
