[package]
name = "btc"
version = "0.1.0"
authors = ["Oghenevwogaga Ebresafe <ebresafegaga@gmail.com>"]
edition = "2021"

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
regex = "~1.7.3"
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
clap = { version = "3.1.6", features = ["derive"] }